// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`displays loading if we are fetching the timepoints 1`] = `
<div
  className="m-route-ladder"
>
  <div
    className="m-route-ladder__header"
  >
    <button
      className="m-close-button"
      onClick={[Function]}
    >
      <span
        className="m-close-button__icon"
        dangerouslySetInnerHTML={
          Object {
            "__html": "SVG",
          }
        }
      />
    </button>
    <div
      className="m-route-ladder__route-name"
    >
      28
    </div>
  </div>
  <button
    className="m-route-ladder__reverse"
    onClick={[Function]}
  >
    <span
      className="m-route-ladder__reverse-icon"
      dangerouslySetInnerHTML={
        Object {
          "__html": "SVG",
        }
      }
    />
    Reverse
  </button>
  loading...
</div>
`;

exports[`renders a route ladder 1`] = `
<div
  className="m-route-ladder"
>
  <div
    className="m-route-ladder__header"
  >
    <button
      className="m-close-button"
      onClick={[Function]}
    >
      <span
        className="m-close-button__icon"
        dangerouslySetInnerHTML={
          Object {
            "__html": "SVG",
          }
        }
      />
    </button>
    <div
      className="m-route-ladder__route-name"
    >
      28
    </div>
  </div>
  <button
    className="m-route-ladder__reverse"
    onClick={[Function]}
  >
    <span
      className="m-route-ladder__reverse-icon"
      dangerouslySetInnerHTML={
        Object {
          "__html": "SVG",
        }
      }
    />
    Reverse
  </button>
  <svg
    className="m-ladder"
    height={500}
    viewBox="-90 -40 180 500"
    width={180}
  >
    <line
      className="m-ladder__line"
      x1={-40}
      x2={-40}
      y1="0"
      y2={420}
    />
    <line
      className="m-ladder__line"
      x1={40}
      x2={40}
      y1="0"
      y2={420}
    />
    <circle
      className="m-ladder__stop-circle"
      cx={-40}
      cy={0}
      r="3"
    />
    <circle
      className="m-ladder__stop-circle"
      cx={40}
      cy={0}
      r="3"
    />
    <text
      className="m-ladder__timepoint-name"
      dominantBaseline="middle"
      textAnchor="middle"
      x="0"
      y={0}
    >
      MATPN
    </text>
    <circle
      className="m-ladder__stop-circle"
      cx={-40}
      cy={210}
      r="3"
    />
    <circle
      className="m-ladder__stop-circle"
      cx={40}
      cy={210}
      r="3"
    />
    <text
      className="m-ladder__timepoint-name"
      dominantBaseline="middle"
      textAnchor="middle"
      x="0"
      y={210}
    >
      WELLH
    </text>
    <circle
      className="m-ladder__stop-circle"
      cx={-40}
      cy={420}
      r="3"
    />
    <circle
      className="m-ladder__stop-circle"
      cx={40}
      cy={420}
      r="3"
    />
    <text
      className="m-ladder__timepoint-name"
      dominantBaseline="middle"
      textAnchor="middle"
      x="0"
      y={420}
    >
      MORTN
    </text>
  </svg>
</div>
`;

exports[`renders a route ladder with vehicles 1`] = `
<div
  className="m-route-ladder"
>
  <div
    className="m-route-ladder__header"
  >
    <button
      className="m-close-button"
      onClick={[Function]}
    >
      <span
        className="m-close-button__icon"
        dangerouslySetInnerHTML={
          Object {
            "__html": "SVG",
          }
        }
      />
    </button>
    <div
      className="m-route-ladder__route-name"
    >
      28
    </div>
  </div>
  <button
    className="m-route-ladder__reverse"
    onClick={[Function]}
  >
    <span
      className="m-route-ladder__reverse-icon"
      dangerouslySetInnerHTML={
        Object {
          "__html": "SVG",
        }
      }
    />
    Reverse
  </button>
  <svg
    className="m-ladder"
    height={500}
    viewBox="-90 -40 180 500"
    width={180}
  >
    <line
      className="m-ladder__line"
      x1={-40}
      x2={-40}
      y1="0"
      y2={420}
    />
    <line
      className="m-ladder__line"
      x1={40}
      x2={40}
      y1="0"
      y2={420}
    />
    <circle
      className="m-ladder__stop-circle"
      cx={-40}
      cy={0}
      r="3"
    />
    <circle
      className="m-ladder__stop-circle"
      cx={40}
      cy={0}
      r="3"
    />
    <text
      className="m-ladder__timepoint-name"
      dominantBaseline="middle"
      textAnchor="middle"
      x="0"
      y={0}
    >
      MATPN
    </text>
    <circle
      className="m-ladder__stop-circle"
      cx={-40}
      cy={210}
      r="3"
    />
    <circle
      className="m-ladder__stop-circle"
      cx={40}
      cy={210}
      r="3"
    />
    <text
      className="m-ladder__timepoint-name"
      dominantBaseline="middle"
      textAnchor="middle"
      x="0"
      y={210}
    >
      WELLH
    </text>
    <circle
      className="m-ladder__stop-circle"
      cx={-40}
      cy={420}
      r="3"
    />
    <circle
      className="m-ladder__stop-circle"
      cx={40}
      cy={420}
      r="3"
    />
    <text
      className="m-ladder__timepoint-name"
      dominantBaseline="middle"
      textAnchor="middle"
      x="0"
      y={420}
    >
      MORTN
    </text>
    <g
      className="m-ladder__vehicle"
      onClick={[Function]}
      transform="translate(47,105) rotate(0,16,13)"
    >
      <g
        className="m-ladder__vehicle-icon"
        transform="scale(0.625)"
      >
        <path
          className="m-ladder__vehicle-triangle "
          d="m27.34 9.46 16.84 24.54a4.06 4.06 0 0 1 -1 5.64 4.11 4.11 0 0 1 -2.3.71h-33.72a4.06 4.06 0 0 1 -4.06-4.11 4 4 0 0 1 .72-2.24l16.84-24.54a4.05 4.05 0 0 1 5.64-1.05 4 4 0 0 1 1.04 1.05z"
        />
      </g>
      <svg
        className="m-ladder__vehicle-label"
        x="0"
        y="26"
      >
        <rect
          className="m-ladder__vehicle-label-background"
          height="11"
          rx="5.5"
          ry="5.5"
          width="30"
        />
        <text
          className="m-ladder__vehicle-label-text"
          textAnchor="inherit"
          transform="rotate(0,15,6)"
          x="5"
          y="9"
        >
          1818
        </text>
      </svg>
    </g>
    <g
      className="m-ladder__vehicle"
      onClick={[Function]}
      transform="translate(-77,420) rotate(180,16,13)"
    >
      <g
        className="m-ladder__vehicle-icon"
        transform="scale(0.625)"
      >
        <path
          className="m-ladder__vehicle-triangle "
          d="m27.34 9.46 16.84 24.54a4.06 4.06 0 0 1 -1 5.64 4.11 4.11 0 0 1 -2.3.71h-33.72a4.06 4.06 0 0 1 -4.06-4.11 4 4 0 0 1 .72-2.24l16.84-24.54a4.05 4.05 0 0 1 5.64-1.05 4 4 0 0 1 1.04 1.05z"
        />
      </g>
      <svg
        className="m-ladder__vehicle-label"
        x="0"
        y="26"
      >
        <rect
          className="m-ladder__vehicle-label-background"
          height="11"
          rx="5.5"
          ry="5.5"
          width="30"
        />
        <text
          className="m-ladder__vehicle-label-text"
          textAnchor="inherit"
          transform="rotate(180,15,6)"
          x="5"
          y="9"
        >
          0479
        </text>
      </svg>
    </g>
  </svg>
  <ul
    className="m-route-ladder__vehicle"
    onClick={[Function]}
    style={
      Object {
        "border": "1px solid black",
      }
    }
  >
    <li>
      <em>
        id:
      </em>
       
      y1818
    </li>
    <li>
      <em>
        label:
      </em>
       
      1818
    </li>
    <li>
      <em>
        timestamp:
      </em>
       
      1557160307
    </li>
    <li>
      <em>
        latitude:
      </em>
       
      0
    </li>
    <li>
      <em>
        longitude:
      </em>
       
      0
    </li>
    <li>
      <em>
        direction_id:
      </em>
       
      0
    </li>
    <li>
      <em>
        route_id:
      </em>
       
      1
    </li>
    <li>
      <em>
        trip_id:
      </em>
       
      39914237
    </li>
    <li>
      <em>
        headsign:
      </em>
       
      h0
    </li>
    <li>
      <em>
        variant:
      </em>
       
      4
    </li>
    <li>
      <em>
        stop status:
      </em>
       
      in_transit_to
      ,
      <br />
      <em>
        stop:
      </em>
       
      57
    </li>
    <li>
      <em>
        timepoint:
      </em>
       
      MATPN
      ,
      <br />
      <em>
        fraction before:
      </em>
       
      0.5
    </li>
  </ul>
  <ul
    className="m-route-ladder__vehicle"
    onClick={[Function]}
    style={
      Object {
        "border": "1px solid black",
      }
    }
  >
    <li>
      <em>
        id:
      </em>
       
      y0479
    </li>
    <li>
      <em>
        label:
      </em>
       
      0479
    </li>
    <li>
      <em>
        timestamp:
      </em>
       
      1557160347
    </li>
    <li>
      <em>
        latitude:
      </em>
       
      0
    </li>
    <li>
      <em>
        longitude:
      </em>
       
      0
    </li>
    <li>
      <em>
        direction_id:
      </em>
       
      1
    </li>
    <li>
      <em>
        route_id:
      </em>
       
      1
    </li>
    <li>
      <em>
        trip_id:
      </em>
       
      39914128
    </li>
    <li>
      <em>
        headsign:
      </em>
       
    </li>
    <li>
      <em>
        variant:
      </em>
       
    </li>
    <li>
      <em>
        stop status:
      </em>
       
      in_transit_to
      ,
      <br />
      <em>
        stop:
      </em>
       
      59
    </li>
    <li>
      <em>
        timepoint:
      </em>
       
      MORTN
      ,
      <br />
      <em>
        fraction before:
      </em>
       
      0
    </li>
  </ul>
</div>
`;
